@@ -1,5 +1,7 @@
 2010-08-29 S. Thiell <stephane.thiell@cea.fr>
 
+	* Task.py: Add docstring for timer's autoclose feature (trac ticket #109).
+
 	* Worker/Worker.py: Attribute 'last_errmsg' not properly initialized (trac
 	ticket #107).
 
